--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "description": "One Agent, one Workflow, one Tool, and some Scorers to bring you the weather in your city.",
   "type": "module",
   "dependencies": {
+    "@mastra/ai-sdk": "latest",
     "@mastra/core": "latest",
     "@mastra/evals": "latest",
-    "@mastra/loggers": "latest",
     "@mastra/libsql": "latest",
+    "@mastra/loggers": "latest",
     "@mastra/memory": "latest",
     "@mastra/observability": "latest",
+    "@pinecone-database/pinecone": "^7.0.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
